# ai-databse-testing

./: .gitignore  api.py  func.py  main.py  pyproject.toml
code/llm/: __init__.py  agents_db.py  others.py  tools.py
code/prompt/: __init__.py  prompt_code.yaml  prompt_database.yaml  prompt_eval.yaml  prompt_mockdata.yaml  prompt_mongodb.yaml  prompt_supervised.yaml
frontend/chat/: index.html  index.js  style.css
frontend/update_prompt/: index.html  index.js  style.css
