[project]
name = "ai-db2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "boto3>=1.42.28",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "gradio>=6.3.0",
    "ipykernel>=7.1.0",
    "kaleido>=1.2.0",
    "langchain>=1.2.3",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "xlsxwriter>=3.2.9",
]
